--- a/index.html
+++ b/index.html
@@ -6,10 +6,176 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Raleway:300,400,700,800&display=swap&subset=latin-ext" rel="stylesheet"/>
+    <title>BestShop Website</title>
     <link rel="stylesheet" href="css/style.css">
-    <title>Sell More Web</title>
 </head>
 <body>
-
+    <header>
+       <div class="container">
+           <a href="index.html" class="logo">BestShop</a>
+           <nav>
+               <ul>
+                   <li><a href="#">Why Us</a></li>
+                   <li><a href="#">Benefits</a></li>
+                   <li><a href="#">Prices</a></li>
+                   <li><a href="#">Contact</a></li>
+               </ul>
+           </nav>
+       </div>
+    </header>
+    <main>
+        <section class="banner">
+            <div class="container">
+                <h1>Sell More!</h1>
+                <p>Open shop on our platform and increase your sales</p>
+                <a href="#">Open your shop</a>
+            </div>
+            <img src="images/Background.png" alt="Background">
+        </section>
+        <section class="stats">
+            <h2>The most popular sales platform in country</h2>
+            <div class="container">
+                <div>
+                    <div><img src="images/Person.svg" alt="Person"></div>
+                    <div>100000+</div>
+                    <div>daily entries</div>
+                </div>
+                <div>
+                    <div><img src="images/Eye.svg" alt="Eye"></div>
+                    <div>2000000+</div>
+                    <div>seen products<br>every day</div>
+                </div>
+                <div>
+                    <div><img src="images/Catalog.svg" alt="Catalog"></div>
+                    <div>10000+</div>
+                    <div>added posts<br> daily</div>
+                </div>
+            </div>
+        </section>
+        <section class="benefits">
+            <div class="container">
+                <div>
+                    <div>
+                        <h2>Be always first</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                    </div>
+                    <div>
+                        <img src="images/Macbook.png" alt="Macbook">
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <h2>Your shop is where you are!</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                    </div>
+                    <div>
+                        <img src="images/iPhone.png" alt="iPhone">
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <h2>Increase recognition your brand!</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                    </div>
+                    <div>
+                        <img src="images/Trumpet.png" alt="Trumpet">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pricing">
+            <h2>Pricing</h2>
+            <div class="container">
+                <div>
+                    <div>
+                        <div>Basic</div>
+                        <div>$0</div>
+                        <div></div>
+                    </div>
+                    <ul>
+                        <li>100 MB HDD</li>
+                        <li>1 Subdomain</li>
+                        <li>2 E-mails</li>
+                        <li>Two years licence</li>
+                        <li>Full support</li>
+                    </ul>
+                    <a href="#">Begin</a>
+                </div>
+                <div>
+                    <div>
+                        <div>Professional</div>
+                        <div>$25</div>
+                        <div>Limited offer</div>
+                    </div>
+                    <ul>
+                        <li>500 MB HDD</li>
+                        <li>2 Subdomain</li>
+                        <li>5 E-mails</li>
+                        <li>One years licence</li>
+                        <li>Full support</li>
+                    </ul>
+                    <a href="#">Begin</a>
+                </div>
+                <div>
+                    <div>
+                        <div>Premium</div>
+                        <div>$60</div>
+                        <div>Limited offer</div>
+                    </div>
+                    <ul>
+                        <li>2 GB HDD</li>
+                        <li>5 Subdomain</li>
+                        <li>20 E-mails</li>
+                        <li>Two years licence</li>
+                        <li>Full support</li>
+                    </ul>
+                    <a href="#">Begin</a>
+                </div>
+            </div>
+        </section>
+        <section class="contact">
+            <div class="container">
+                <div>
+                    <h2>Any questions?</h2>
+                    <div>
+                        Leave your email address or contact us!
+                    </div>
+                    <div>
+                        <a href="mailto:info@bestshop.xyz">info@bestshop.xyz</a>
+                        <a href="phone:123456789">123 456 789</a>
+                    </div>
+                </div>
+                <div>
+                    <form>
+                        <div>
+                            <label for="name">Name</label>
+                            <input type="text" id="name">
+                        </div>
+                        <div>
+                            <label for="email">E-mail</label>
+                            <input type="email" id="email">
+                        </div>
+                        <div>
+                            <label>
+                                <input type="checkbox">
+                                <span></span>
+                                    I hereby give consent for my personal data included in my
+                                    application to be processed for the purposes of the recruitment
+                                    process under the European Parliament’s and Council of the
+                                    European Union Regulation on the Protection of Natural Persons as
+                                    of 27 April 2016, with regard to the processing of personal data
+                                    and on the free movement of such data, and repealing Directive
+                                    95/46/EC (Data Protection Directive)
+                            </label>
+                        </div>
+                        <button type="submit">Send</button>
+                    </form>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer></footer>
 </body>
 </html>
