adding footer and footer styles

--- a/index.html
+++ b/index.html
@@ -176,6 +176,17 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="container">
+            <div>
+                <a href="#" class="logo">BestShop</a>
+                <span>© 2019 BestShop LTD, All Rights Reserved</span>
+            </div>
+            <div>
+                <a href="#"><img src="images/Twitter.svg" alt="twitter"/></a>
+                <a href="#"><img src="images/Facebook.svg" alt="facebook"/></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
